# hfget

./: README.md  hfget.py  pyproject.toml  requirements.txt
hfget/: __init__.py  cli.py  core.py
src/: hf_organizer_core.py  hfget_cli.py  hfget_web.py
